cli: fix bugs with tracing
- catch parsing exceptions we ourselves throw to provide feedback to
  users about errors.
- fix problems parsing command line options related to tracing.
- fix typo on guid enablement in tracing.

--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-21 Thu 14:54]
+#+CAPTION: Clock summary at [2019-02-21 Thu 15:42]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *212:13* |        |        | 100.0 |
+| *Total time*                                              | *213:01* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 212:13   |        |        | 100.0 |
-| Active                                                    |          | 212:13 |        | 100.0 |
+| Stories                                                   | 213:01   |        |        | 100.0 |
+| Active                                                    |          | 213:01 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   1.0 |
 | Sprint and product backlog grooming                       |          |        |   5:32 |   2.6 |
-| Work on MASD theory                                       |          |        | 113:38 |  53.5 |
+| Work on MASD theory                                       |          |        | 113:38 |  53.3 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.3 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.4 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   3.0 |
@@ -36,7 +36,7 @@
 | Disabling facet globally and enabling locally fails       |          |        |   2:21 |   1.1 |
 | References to types in top-level namespace do not resolve |          |        |   0:51 |   0.4 |
 | Create a colour palette test model                        |          |        |   1:09 |   0.5 |
-| Create a single binary for all of dogen                   |          |        |  33:47 |  15.9 |
+| Create a single binary for all of dogen                   |          |        |  34:35 |  16.2 |
 | Great meta-data rename                                    |          |        |   4:54 |   2.3 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.4 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.4 |
@@ -679,6 +679,7 @@ superset of handcrafted.
 *** COMPLETED Create a single binary for all of dogen                 :story:
     CLOSED: [2019-02-21 Thu 14:54]
     :LOGBOOK:
+    CLOCK: [2019-02-21 Thu 14:55]--[2019-02-21 Thu 15:43] =>  0:48
     CLOCK: [2019-02-21 Thu 14:09]--[2019-02-21 Thu 14:54] =>  0:45
     CLOCK: [2019-02-21 Thu 13:21]--[2019-02-21 Thu 14:08] =>  0:47
     CLOCK: [2019-02-21 Thu 10:53]--[2019-02-21 Thu 11:23] =>  0:30
@@ -932,6 +933,10 @@ the unique set of referenced models and load those. To put in this
 logic in the code at present (i.e. without a two-phase approach) would
 mean we'd have to load the same models several times (or heavily
 rewrite existing code, resulting in a two-phase approach, anyway).
+
+*** Implement configuration validator                                 :story:
+
+At present we are not performing any validation.
 
 *** Create transforms for templating                                  :story:
 
