--- a/doc/agile/v1/sprint_backlog_11.org
+++ b/doc/agile/v1/sprint_backlog_11.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-02-22 Fri 21:02]
+#+CAPTION: Clock summary at [2019-02-22 Fri 21:17]
 | <75>                                                      |          |        |        |       |
 | Headline                                                  | Time     |        |        |     % |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| *Total time*                                              | *221:41* |        |        | 100.0 |
+| *Total time*                                              | *221:55* |        |        | 100.0 |
 |-----------------------------------------------------------+----------+--------+--------+-------|
-| Stories                                                   | 221:41   |        |        | 100.0 |
-| Active                                                    |          | 221:41 |        | 100.0 |
+| Stories                                                   | 221:55   |        |        | 100.0 |
+| Active                                                    |          | 221:55 |        | 100.0 |
 | Edit release notes for previous sprint                    |          |        |   2:03 |   0.9 |
 | Sprint and product backlog grooming                       |          |        |   5:32 |   2.5 |
-| Work on MASD theory                                       |          |        | 113:38 |  51.3 |
+| Work on MASD theory                                       |          |        | 113:38 |  51.2 |
 | Rename models to fit MASD architecture                    |          |        |   4:56 |   2.2 |
 | Read up on framework and API design                       |          |        |   0:57 |   0.4 |
 | Analyse the state of the mess of refactors                |          |        |   6:27 |   2.9 |
@@ -39,7 +39,7 @@
 | Create a single binary for all of dogen                   |          |        |  37:30 |  16.9 |
 | Setup a nightly build for Dogen                           |          |        |   3:47 |   1.7 |
 | Great meta-data rename                                    |          |        |   6:00 |   2.7 |
-| Throw on profiles that refer to invalid fields            |          |        |   0:52 |   0.4 |
+| Throw on profiles that refer to invalid fields            |          |        |   1:06 |   0.5 |
 | Dogen's vcpkg export for OSX was created from master      |          |        |   0:46 |   0.3 |
 | Fix clang-cl warnings                                     |          |        |   5:07 |   2.3 |
 | Use tracing options in existing code                      |          |        |   0:57 |   0.4 |
@@ -882,9 +882,9 @@ its not clear if its MASD or dogen.
 
   in fact, should we mention "tagged values" instead of "comment"?
 
-*** COMPLETED Throw on profiles that refer to invalid fields          :story:
-    CLOSED: [2019-02-22 Fri 19:31]
+*** STARTED Throw on profiles that refer to invalid fields            :story:
     :LOGBOOK:
+    CLOCK: [2019-02-22 Fri 21:03]--[2019-02-22 Fri 21:17] =>  0:14
     CLOCK: [2019-02-22 Fri 20:31]--[2019-02-22 Fri 21:02] =>  0:31
     CLOCK: [2019-02-22 Fri 19:10]--[2019-02-22 Fri 19:31] =>  0:21
     :END:
@@ -898,6 +898,11 @@ validation. However, the stitch tests still rely on this
 behaviour. The right solution for this is to have some kind of
 override flag ("compatibility mode" springs to mind) which is off by
 default but can be used (judiciously).
+
+We put a fix in but it seems weave is still borked. The problem
+appears to be that we do something in the generation path that is not
+done for weaving (and presumably for conversion). The hack was put
+back in for now.
 
 *** STARTED Dogen's vcpkg export for OSX was created from master      :story:
     :LOGBOOK:
